--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,27 @@
+# ===============================
+# = DATA SOURCE
+# ===============================
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.url=jdbc:mysql://localhost:3306/romaentertainment
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-//spring.jpa.show-sql=true
-spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=true
+
+# ===============================
+# = JPA / HIBERNATE
+# ===============================
+//spring.jpa.show-sql = true
+//spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+
+# ===============================
+# = Thymeleaf configurations
+# ===============================
+spring.thymeleaf.mode=LEGACYHTML5
+spring.thymeleaf.cache=false
+
+# ==============================================================
+# = Spring Security / Queries for AuthenticationManagerBuilder
+# ==============================================================
+spring.queries.users-query=SELECT login, password, active FROM employee WHERE login = ?
+spring.queries.roles-query=SELECT employee.login, role.name FROM employee INNER JOIN employee_role ON(employee.id = employee_role.employee_id) INNER JOIN role ON(employee_role.role_id = role.id) WHERE employee.login = ?
